examples/errors/music/unclosed_slur.abc
X:1
T:Unclosed Slur
K:C
% M002: Missing )
(CDEF GABc|
CDEF GABc)|
